# sb_dummy_api

./: docker-compose.yml  main.py  pyproject.toml
db/: database.db  database.py  message_dao.py
scripts/: insert_data.py
service/: message_service.py  schemas.py
